# icbs

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  setup.py
notebooks/: garment_classifier.pt  garment_classifier.py  simple_example.ipynb  simple_example_llm.ipynb  util.py
src/icbs/: derivatives.py  evaluation.py  loops.py  move.py  problem.py  pruner.py  solvers.py  state.py  util.py  util_llm.py
src/sa-card/: README.md  test_instance.ubqp
src/sa-card/include/: ising-instance.hpp  ising-solver-heuristics.hpp  ising-solver-output.hpp  solution.hpp
src/sa-card/src/: CMakeLists.txt  sa-card-test.cpp  sa-card.cpp
tests/: test_derivatives.py  test_move.py  test_problem.py  test_solvers.py  test_state.py  test_util.py
